# osuds-res-conv

./: CMakeLists.txt  convert_all.sh  main.cpp  main.h  palette.cpp
